# robot-framework-cpp

./: run_test.bat  test.robot
cpp/: CMakeLists.txt  robot_framework_cpp.cpp
cpp/include/: robotframeworkcpp.h
cpp/include/robot/: robot_cpp.h
cpp/test/: CMakeLists.txt  main_tests.cpp
cpp/unit-tests/: CMakeLists.txt  main_tests.cpp  step_tests.cpp
robot_framework_cpp/: cpp.py
